--- a/template.tex
+++ b/template.tex
@@ -26,7 +26,7 @@
 
 % personal data
 \name{Javier José}{Clavijo}
-\title{Curriculum Vitae - Octubre 2022}                               % optional, remove / comment the line if not wanted
+\title{Curriculum Vitae - Diciembre 2023}                               % optional, remove / comment the line if not wanted
 \address{Enzo Bordabehere 2879}{1417 Ciudad Autónoma de Buenos Aires}{Argentina}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{(011)-15-5805-1093}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 \phone[fixed]{(011)4522-4671}
@@ -34,7 +34,7 @@
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
 \social[linkedin]{javier-j-clavijo}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
-%\social[github]{jdoe}                              % optional, remove / comment the line if not wanted
+\social[github]{jjclavijo}                              % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 \quote{Ingeniero en Agrimensura, Docente en Cartografía}                                 % optional, remove / comment the line if not wanted
@@ -80,25 +80,27 @@ Dedicación Simple, Asignado a la materia \textbf{Cartografía} del Departamento
 Dedicación Simple, Asignado a la materia \textbf{Cartografía} del Departamento de Agrimensura. \\ Concursado, Resolución 5114/17}
 \cventry{2015--2017}{Ayudante de Primera Interino}{Facultad de Ingeniería}{Universidad de Buenos Aires}{}{
   Dedicación Simple, Asignado a la materia \textbf{Cartografía} del Departamento de Agrimensura. \\
-  Resoluciones: 2113/15 nombramiento 7/7/2015 a 29/2/2016, 223/16 Renovación hasta 28/2/2017, 410/17 Renovación hasta 28/2/2018}
+  Resolución 2113/15}
+
+\subsection{Formación de recursos Humanos}
+
+\cventry{2022-2023}{Co-Dirección Tesis de Grado}{Federico Fernandez Caruso, Director: Dr. Sebastián Grynberg}{}{}{Resolución de ambigüedades de fase de observaciones GPS sin detección previa de saltos de ciclo}
 
 \subsection{Ejercicio de la Profesión}
 \cventry{2013--Presente}{Socio}{RyJ Clavijo Estudio de Agrimensura}{Buenos Aires}{}{
   RyJ Clavijo, de “Raúl A Clavijo y Javier J Clavijo SH” es un estudio que realiza tareas profesionales de agrimensura tanto en la Ciudad Autónoma de Buenos Aires, como en la Provincia de Buenos Aires y esporádicamente en el interior del país.}
 
-\cventry{Dic 2016}{Proveedor}{Universidad Tecnológica Nacional}{Relevamiento del Planetario de Buenos Aires “Galileo Galilei”}{}{
-Se realizaron tareas de relevamiento en el entorno del planetario para apoyar el proyecto de obras de renovación. El trabajo, encargado por el gobierno de la ciudad se realizó a través de un convenio con la Universidad Tecnológica Nacional.}
-
-\cventry{marzo -- mayo 2015}{Asesoramiento}{SERMAN \& Asociados}{Relevamiento Cuenca Rió Luján}{}{Estudio de la cuenca del Rió Lujan,
-  en sociedad con el Ing. Agrónomo José M. Clavijo, se realizó análisis de la cuenca a través de imágenes satelitales y datos vectoriales de Open Street Map. }
-
 \cventry{2008 -- 2013}{Free Lance}{Trabajos de Apoyo a la Agrimensura}{}{}{
 Tareas de topografía - Revelamientos planialtimétricos - Apoyo a obra vial - Confección de planos de mensura - Tramitación de Estados Parcelarios – Estudio de antecedentes catastrales y dominiales - Cálculo de mediciones GPS - Desarrollo de herramientas informáticas para asistencia al cálculo y dibujo en Computadora.}
 
 \section{Investigación}
-\subsection{Proyectos en curso}
+\subsection{Publicaciones}
 
-\cvitem{UBATIC \\ Co-Director de Proyecto}{\emph{Sistema de visualización geográfica proyectada sobre pantalla esférica} - Universidad de Buenos Aires - Resolución del consejo superior RESCS-2021-803-E-UBA-REC}
+\cvitem{Clavijo JJ \\ Martínez JF } {\textit{Adversarial learning of permanent seismic deformation from GNSS coordinate time series} 2023. Computers \& Geocsiences. \url{https://doi.org/10.1016/j.cageo.2023.105344} }
+
+\subsection{Proyectos de desarrollo}
+
+\cvitem{UBATIC}{ Co-Director de Proyecto: \emph{Sistema de visualización geográfica proyectada sobre pantalla esférica} - Universidad de Buenos Aires - Resolución del consejo superior RESCS-2021-803-E-UBA-REC}
 
 \subsection{Tesis de Doctorado}
 
@@ -118,26 +120,29 @@ Aplicadas de la Facultad de Ingeniería de la Universidad de Buenos Aires.}
 
 \subsection{Trabajos en eventos científico-tecnológicos}
 
+\cvitem{Clavijo JJ } {\textit{Möbius y la tectónica o interpolar procesos en espacios transformados} Argentina. Buenos Aires. 2023. IV Jornadas de Geociencias para la Ingeniería, Facultad de Infeniería - Universidad de Buenos Aires }
+
+\cvitem{Clavijo JJ } {\textit{Innovación tecnológica y paradigmas de enseñanza en Cartografía} Argentina. Buenos Aires. 2023. XVIII Semana Nacional de la Cartografía, Centro argentino de cartografía. }
+
 \cvitem{Clavijo JJ \\ Martínez JF } {\textit{Marcos de Referencia Geodésicos, Un enfoque Bayesiano.} Argentina. Buenos Aires. 2021. Congreso. CADI / CLADI / CAEDI }
 
-\cvitem{Clavijo JJ \\ Harguinteguy M \\ Mohuanna E} {\textit{Federalismo en la Agrimensura Argentina: Una respuesta Cartográfica.} Argentina. Mendoza. 2019. Congreso. XII Congreso Nacional de Agrimensura}
+% \cvitem{Clavijo JJ \\ Harguinteguy M \\ Mohuanna E} {\textit{Federalismo en la Agrimensura Argentina: Una respuesta Cartográfica.} Argentina. Mendoza. 2019. Congreso. XII Congreso Nacional de Agrimensura}
 
 \cvitem{Clavijo JJ} {\textit{Aprendizaje estadístico con series geodésicas.} Argentina. Buenos Aires. 2018. Congreso. III Jornadas de Geociencias para la Ingeniería, Facultad de Ingeniería - Universidad de Buenos Aires}
 
-\cvitem{Clavijo JJ \\ Oreiro FA \\ Fiore M \\ D'Onofrio EE} {\textit{Medición de altura del agua con receptor GNSS de bajo costo.} Argentina. La Plata. 2017. Congreso. XXVIII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas (AAGG 2017). Asociación Argentina de Geofísicos y Geodestas}
+% \cvitem{Clavijo JJ \\ Oreiro FA \\ Fiore M \\ D'Onofrio EE} {\textit{Medición de altura del agua con receptor GNSS de bajo costo.} Argentina. La Plata. 2017. Congreso. XXVIII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas (AAGG 2017). Asociación Argentina de Geofísicos y Geodestas}
 
-\cvitem{Clavijo JJ; Miranda SA} {\textit{Sistema de ajuste GNSS desde una base de datos geoespacial} Argentina. La Plata. 2017. Congreso. XXVIII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas (AAGG 2017). Asociación Argentina de Geofísicos y Geodestas}
+% \cvitem{Clavijo JJ; Miranda SA} {\textit{Sistema de ajuste GNSS desde una base de datos geoespacial} Argentina. La Plata. 2017. Congreso. XXVIII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas (AAGG 2017). Asociación Argentina de Geofísicos y Geodestas}
 
-\cvitem{Arecco MA \\ Oreiro FA \\ Clavijo JJ \\ Pradelli A} {\textit{Predicción de ocurrencia de escorrentía a partir de datos GRACE, hidrométricos y pluviométricos en el curso inferior del Río Paraná} Santa Fe, 2 y 3 de Junio 2016. 2do Encuentro Nacional de investigadores de Agrimensura. Facultad de Ingeniería y ciencias hídricas, Universidad Nacional del Litoral }
+% \cvitem{Arecco MA \\ Oreiro FA \\ Clavijo JJ \\ Pradelli A} {\textit{Predicción de ocurrencia de escorrentía a partir de datos GRACE, hidrométricos y pluviométricos en el curso inferior del Río Paraná} Santa Fe, 2 y 3 de Junio 2016. 2do Encuentro Nacional de investigadores de Agrimensura. Facultad de Ingeniería y ciencias hídricas, Universidad Nacional del Litoral }
 
-\cvitem{Oreiro FA \\ D'Onofrio EE \\ Fiore M \\ Clavijo JJ \\ Arecco MA \\ Larocca PA} {\textit{Cálculo de la corrección de carga oceánica utilizando un modelo regional de marea y observaciones de altura del agua en el Río de la Plata} La Plata. 15 a 16 de Abril 2016.  Primer Taller Nacional del Observatorio Argentino-Alemán de Geodesia (AGGO). RAPEAS Red Argentina Para el Estudio de la Atmósfera Superior}
+% \cvitem{Oreiro FA \\ D'Onofrio EE \\ Fiore M \\ Clavijo JJ \\ Arecco MA \\ Larocca PA} {\textit{Cálculo de la corrección de carga oceánica utilizando un modelo regional de marea y observaciones de altura del agua en el Río de la Plata} La Plata. 15 a 16 de Abril 2016.  Primer Taller Nacional del Observatorio Argentino-Alemán de Geodesia (AGGO). RAPEAS Red Argentina Para el Estudio de la Atmósfera Superior}
 
-\cvitem{Clavijo JJ \\ Oreiro FA} {\textit{Un año de marea en Base Esperanza: Análisis del SNR en el sitio SPRZ.} Buenos Aires. 2 y 3 de Septiembre 2015. II Jornadas de Geociencias para la Ingeniería. Facultad de Ingeniería, Universidad de Buenos Aires}
+% \cvitem{Clavijo JJ \\ Oreiro FA} {\textit{Un año de marea en Base Esperanza: Análisis del SNR en el sitio SPRZ.} Buenos Aires. 2 y 3 de Septiembre 2015. II Jornadas de Geociencias para la Ingeniería. Facultad de Ingeniería, Universidad de Buenos Aires}
 
+% \cvitem{Clavijo JJ \\ Oreiro FA \\ D'Onofrio EE}{ \textit{Medición de deformación periódica de la corteza terrestre utilizando estaciones GPS permanentes: Aplicación a la red RAMSAC y evaluación de los errores del método.} San Juan. 10 a 14 de Noviembre de 2014. XXVII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas. Asociación Argentina de Geofísicos y Geodestas}
 
-\cvitem{Clavijo JJ \\ Oreiro FA \\ D'Onofrio EE}{ \textit{Medición de deformación periódica de la corteza terrestre utilizando estaciones GPS permanentes: Aplicación a la red RAMSAC y evaluación de los errores del método.} San Juan. 10 a 14 de Noviembre de 2014. XXVII Reunión Científica de la Asociación Argentina de Geofísicos y Geodestas. Asociación Argentina de Geofísicos y Geodestas}
-
-\cvitem{Clavijo JJ}{ \textit{Señales diurnas y sub - diurnas de marea terrestre en la medición GPS: una aplicación en la red RAMSAC.} Buenos Aires. 24 y 25 de septiembre 2014. Jornada. Primeras Jornadas de Geociencias para la Ingeniería. Facultad de Ingeniería, Universidad de Buenos Aires}
+% \cvitem{Clavijo JJ}{ \textit{Señales diurnas y sub - diurnas de marea terrestre en la medición GPS: una aplicación en la red RAMSAC.} Buenos Aires. 24 y 25 de septiembre 2014. Jornada. Primeras Jornadas de Geociencias para la Ingeniería. Facultad de Ingeniería, Universidad de Buenos Aires}
 
 %\section{Asistencia a Congresos}
 %
@@ -153,7 +158,7 @@ Aplicadas de la Facultad de Ingeniería de la Universidad de Buenos Aires.}
 \cvitemwithcomment{Inglés}{Medio}{Lectura y comprensión avanzada, nivel de comunicación oral medio.}
 
 \section{Informática}
-\cvdoubleitem{Programación}{Python, C, Lisp, Perl, awk, bash, Haskell}{Bases de Datos}{Postgres}
+\cvdoubleitem{Programación}{Python, C, Lisp, Rust, awk, bash, Haskell}{Bases de Datos}{Postgres}
 \cvdoubleitem{Análisis de Datos}{Python, R}{Oficina}{Word, Excel, Libreoffice}
 \cvdoubleitem{Infraestructura}{Docker, Git, Podman/Buildah}{Sistemas Operativos}{Linux, Windows}
 \cvdoubleitem{Edición}{Inkscape, GIMP, Latex}{Dibujo}{CAD:AutoCAD, BricsCAD}
